deploy/base/postgres/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres # has to match .spec.template.metadata.labels
  serviceName: "postgres"
  replicas: 1 # by default is 1
  minReadySeconds: 5 # by default is 0
  template:
    metadata:
      labels:
        app: postgres # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres
        image: docker.io/library/postgres:14-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: persistence
          mountPath: /bitnami/postgresql
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
            ephemeral-storage: 1Gi
          limits:
            cpu: "200m"
            memory: "500Mi"
            ephemeral-storage: 1Gi
  volumeClaimTemplates: #TODO
  - metadata:
      name: persistence
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
