deploy/base/postgres/networkpolicy.yaml
# This is a firewall whitelist for traffic into and between the kubegres pods
# See https://kubernetes.io/docs/concepts/services-networking/network-policies/

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tmeit-db
spec:
  podSelector:
    matchLabels:
      app: tmeit-db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: tmeit-app
      - podSelector:
          matchLabels:
            app: tmeit-db
      ports:
        - protocol: TCP
          port: 5432
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: tmeit-db
      ports:
        - protocol: TCP
          port: 5432
